# hack18_dd

./: .gitignore  CMakeLists.txt  kernel.cu  laplace3d_strides.cu  laplace3d_strides.h  laplace_7pt_ex.py  main.cu  test_liblaplace3d_strides.cu
